Update challenge 1 work.ipynb

--- a/Loan_Analyzer/challenge 1 work.ipynb
+++ b/Loan_Analyzer/challenge 1 work.ipynb
@@ -263,7 +263,10 @@
     "    \n",
     "    for loan in inexpensive_loans:\n",
     "        csvwriter.writerow(loan.values())\n",
-    "        print(loan.values)"
+    "        print(loan.values)\n",
+    "        \n",
+    "        #could not figure out how to write the inexpensive loans into the csv file. \n",
+    "        #have tutor session soon to figure out this problem. "
    ]
   },
   {
