--- a/Loan_Analyzer-1/challenge 1 work.ipynb
+++ b/Loan_Analyzer-1/challenge 1 work.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 1,
    "id": "f65e0947-e720-49f3-a2b9-4f3ee786871b",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 2,
    "id": "3714d356-917d-4199-bad5-8836345fefbd",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "id": "d19371e5-683b-4d6f-a8ee-7e734245c41a",
    "metadata": {},
    "outputs": [
@@ -146,15 +146,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 4,
    "id": "3c30b9c6-08ff-44af-8412-f0f3ebf98d2f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[500, 200]\n"
+      "[{'loan_price': 500, 'remaining_months': 13, 'repayment_interval': 'bullet', 'future_value': 1000}, {'loan_price': 200, 'remaining_months': 16, 'repayment_interval': 'bullet', 'future_value': 1000}]\n"
      ]
     }
    ],
@@ -194,15 +196,17 @@
     "\n",
     "# @TODO: Create an empty list called `inexpensive_loans`\n",
     "inexpensive_loans = []\n",
-    "\n",
-    "# @TODO: Loop through all the loans and append any that cost $500 or less to the `inexpensive_loans` list\n",
     "for loan_data in loans:\n",
+    "    if loan_data[\"loan_price\"] <= 500 :\n",
+    "        inexpensive_loans.append(loan_data)\n",
+    "# @TODO: Loop through all the loans and append any that cost $500 or less to the `inexpensive_loans` list\n",
+    "# for loan_data in loans:\n",
     "    \n",
-    "    loan_cost = loan_data[\"loan_price\"]\n",
+    "#     loan_cost = loan_data[\"loan_price\"]\n",
     "    \n",
-    "    if loan_cost <= 500 :\n",
-    "        #print(loan_cost)\n",
-    "        inexpensive_loans.append(loan_cost)\n",
+    "#     if loan_cost <= 500 :\n",
+    "#         #print(loan_cost)\n",
+    "#         inexpensive_loans.append(loan_cost)\n",
     "\n",
     "# @TODO: Print the `inexpensive_loans` list\n",
     "\n",
@@ -211,28 +215,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 5,
    "id": "55cd583a-2472-4e95-a79c-5e61a6d8626d",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'int' object has no attribute 'values'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_18708/4195671467.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     33\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     34\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mloan\u001b[0m \u001b[1;32min\u001b[0m \u001b[0minexpensive_loans\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 35\u001b[1;33m         \u001b[0mcsvwriter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriterow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mloan\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     36\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mloan\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'int' object has no attribute 'values'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from asyncio import futures\n",
+    "#from asyncio import futures\n",
     "import csv\n",
     "from pathlib import Path\n",
     "\n",
-    "from numpy import average, number\n",
+    "#from numpy import average, number\n",
     "\"\"\"Part 5: Save the results.\n",
     "\n",
     "Output this list of inexpensive loans to a csv file\n",
@@ -263,7 +255,7 @@
     "    \n",
     "    for loan in inexpensive_loans:\n",
     "        csvwriter.writerow(loan.values())\n",
-    "        print(loan.values)\n",
+    "        #print(loan.values())\n",
     "        \n",
     "        #could not figure out how to write the inexpensive loans into the csv file. \n",
     "        #have tutor session soon to figure out this problem. "
@@ -302,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
