Setup datafarmes for Chall3

--- a/Starter_Code_4/Challenge 4.ipynb
+++ b/Starter_Code_4/Challenge 4.ipynb
@@ -25,112 +25,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 190,
    "id": "7037c19e-7608-439f-ade7-2c09e92d7dd4",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SOROS FUND MANAGEMENT LLC</th>\n",
-       "      <th>PAULSON &amp; CO.INC.</th>\n",
-       "      <th>TIGER GLOBAL MANAGEMENT LLC</th>\n",
-       "      <th>BERKSHIRE HATHAWAY INC</th>\n",
-       "      <th>S&amp;P 500</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2014-10-02</th>\n",
-       "      <td>-0.000442</td>\n",
-       "      <td>0.000150</td>\n",
-       "      <td>0.000013</td>\n",
-       "      <td>0.000171</td>\n",
-       "      <td>0.000154</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2014-10-03</th>\n",
-       "      <td>0.000610</td>\n",
-       "      <td>0.000518</td>\n",
-       "      <td>0.000407</td>\n",
-       "      <td>0.001420</td>\n",
-       "      <td>0.011164</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2014-10-06</th>\n",
-       "      <td>0.003065</td>\n",
-       "      <td>0.000510</td>\n",
-       "      <td>0.000474</td>\n",
-       "      <td>0.001687</td>\n",
-       "      <td>0.009993</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2014-10-07</th>\n",
-       "      <td>0.000444</td>\n",
-       "      <td>0.000193</td>\n",
-       "      <td>0.000265</td>\n",
-       "      <td>0.001101</td>\n",
-       "      <td>-0.005443</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2014-10-08</th>\n",
-       "      <td>0.000835</td>\n",
-       "      <td>0.000563</td>\n",
-       "      <td>0.000507</td>\n",
-       "      <td>0.001943</td>\n",
-       "      <td>0.012046</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            SOROS FUND MANAGEMENT LLC  PAULSON & CO.INC.  \\\n",
-       "date                                                       \n",
-       "2014-10-02                  -0.000442           0.000150   \n",
-       "2014-10-03                   0.000610           0.000518   \n",
-       "2014-10-06                   0.003065           0.000510   \n",
-       "2014-10-07                   0.000444           0.000193   \n",
-       "2014-10-08                   0.000835           0.000563   \n",
-       "\n",
-       "            TIGER GLOBAL MANAGEMENT LLC  BERKSHIRE HATHAWAY INC   S&P 500  \n",
-       "date                                                                       \n",
-       "2014-10-02                     0.000013                0.000171  0.000154  \n",
-       "2014-10-03                     0.000407                0.001420  0.011164  \n",
-       "2014-10-06                     0.000474                0.001687  0.009993  \n",
-       "2014-10-07                     0.000265                0.001101 -0.005443  \n",
-       "2014-10-08                     0.000507                0.001943  0.012046  "
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Based on the plot of cumulative returns, it is clear that none of the firms outperformed the S&P over nearly 6 years\n"
+     ]
     },
     {
      "data": {
@@ -146,7 +50,7 @@
     }
    ],
    "source": [
-    "#whale_navs_df.plot(kind='line', figsize=(50,25), title=\"Performance\")\n",
+    "#Cumulative Returns for all funds and S&P\n",
     "\n",
     "cumulative_returns = whale_navs_df.cumsum()\n",
     "\n",
@@ -154,15 +58,22 @@
     "cumulative_returns.head()\n",
     "\n",
     "#I could not figure out how to get cumprod() to work with this dataframe. It gives values that are basically 0. I used cumsum() instead\n",
-    "#Based on the plot of cumulative returns, it is clear that none of the firms outperformed the S&P over nearly 6 years. "
+    "print(\"Based on the plot of cumulative returns, it is clear that none of the firms outperformed the S&P over nearly 6 years\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 189,
    "id": "d90f71e0-92a7-457e-b9e1-335eaaff0e4c",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Berkshire Hathaway was the most volatile fund while Tiger Glboal Management was the least volatile\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -170,16 +81,6 @@
       "C:\\Users\\kukhy\\anaconda3\\envs\\dev\\lib\\site-packages\\ipykernel_launcher.py:4: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
       "  after removing the cwd from sys.path.\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<AxesSubplot:title={'center':'Fund Perfomance'}>"
-      ]
-     },
-     "execution_count": 143,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
@@ -207,15 +108,16 @@
     }
    ],
    "source": [
+    "#Measuring volatility using cumulative returns\n",
     "cumulative_returns.plot(title= \"Volatility Measure\", kind='box', figsize =(15,10))\n",
     "cumulative_returns.head()\n",
     "\n",
+    "#Fund performance, dropped S&P.\n",
     "fund_performance = cumulative_returns.drop('S&P 500',1)\n",
     "\n",
     "fund_performance.plot(title= \"Fund Perfomance\", kind='box', figsize = (20,10) )\n",
     "\n",
-    "#Based on the box plot visualization of each fund portfolio performance: \n",
-    "#we can deduce that Berkshire Hathaway was the most volatile while Tiger Glboal Management was the least volatile\n"
+    "print(\"Berkshire Hathaway was the most volatile fund while Tiger Glboal Management was the least volatile\")\n"
    ]
   },
   {
@@ -248,11 +150,12 @@
     }
    ],
    "source": [
-    "#whale_navs_df.std()\n",
+    "#Annualized Standard Deviation\n",
     "annualized_std = cumulative_returns.std() * math.sqrt(252)\n",
     "\n",
     "annualized_std.plot(title= 'Annualized Std Deviation', kind='bar')\n",
-    "\n"
+    "\n",
+    "#Having trouble figuring out how to add a rolling window of 21 days...\n"
    ]
   },
   {
@@ -285,6 +188,7 @@
     }
    ],
    "source": [
+    "#Annualized Standard Deviation for Firms\n",
     "annualized_std_firms = fund_performance.std() * math.sqrt(252)\n",
     "\n",
     "annualized_std_firms.plot(title= 'Fund Std Deviation', kind='bar')"
