--- a/Starter_Code_4/Challenge 4.ipynb
+++ b/Starter_Code_4/Challenge 4.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "d9158e39-a89e-441f-b5b3-e4ddc0df662e",
    "metadata": {},
    "outputs": [
@@ -91,57 +91,8 @@
        "      <td>0.000842</td>\n",
        "      <td>0.017489</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-04</th>\n",
-       "      <td>-0.001079</td>\n",
-       "      <td>0.005050</td>\n",
-       "      <td>-0.000653</td>\n",
-       "      <td>-0.003985</td>\n",
-       "      <td>-0.008165</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-08</th>\n",
-       "      <td>-0.001737</td>\n",
-       "      <td>-0.001888</td>\n",
-       "      <td>-0.001270</td>\n",
-       "      <td>-0.005019</td>\n",
-       "      <td>-0.027323</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-09</th>\n",
-       "      <td>0.001115</td>\n",
-       "      <td>0.002123</td>\n",
-       "      <td>0.002701</td>\n",
-       "      <td>0.001817</td>\n",
-       "      <td>0.019747</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-10</th>\n",
-       "      <td>-0.001258</td>\n",
-       "      <td>0.001389</td>\n",
-       "      <td>-0.001591</td>\n",
-       "      <td>-0.002398</td>\n",
-       "      <td>-0.017364</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-11</th>\n",
-       "      <td>-0.000418</td>\n",
-       "      <td>-0.001930</td>\n",
-       "      <td>-0.000434</td>\n",
-       "      <td>-0.001016</td>\n",
-       "      <td>0.000509</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1497 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -152,12 +103,6 @@
        "2014-10-06                   0.002456          -0.000008   \n",
        "2014-10-07                  -0.002621          -0.000317   \n",
        "2014-10-08                   0.000390           0.000369   \n",
-       "...                               ...                ...   \n",
-       "2020-09-04                  -0.001079           0.005050   \n",
-       "2020-09-08                  -0.001737          -0.001888   \n",
-       "2020-09-09                   0.001115           0.002123   \n",
-       "2020-09-10                  -0.001258           0.001389   \n",
-       "2020-09-11                  -0.000418          -0.001930   \n",
        "\n",
        "            TIGER GLOBAL MANAGEMENT LLC  BERKSHIRE HATHAWAY INC   S&P 500  \n",
        "date                                                                       \n",
@@ -165,18 +110,10 @@
        "2014-10-03                     0.000394                0.001248  0.011009  \n",
        "2014-10-06                     0.000066                0.000267 -0.001170  \n",
        "2014-10-07                    -0.000208               -0.000587 -0.015436  \n",
-       "2014-10-08                     0.000242                0.000842  0.017489  \n",
-       "...                                 ...                     ...       ...  \n",
-       "2020-09-04                    -0.000653               -0.003985 -0.008165  \n",
-       "2020-09-08                    -0.001270               -0.005019 -0.027323  \n",
-       "2020-09-09                     0.002701                0.001817  0.019747  \n",
-       "2020-09-10                    -0.001591               -0.002398 -0.017364  \n",
-       "2020-09-11                    -0.000434               -0.001016  0.000509  \n",
-       "\n",
-       "[1497 rows x 5 columns]"
+       "2014-10-08                     0.000242                0.000842  0.017489  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +133,7 @@
     "\n",
     "whale_navs_df = whale_navs_df.pct_change().dropna()\n",
     "\n",
-    "whale_navs_df\n",
+    "whale_navs_df.head()\n",
     "\n"
    ]
   },
@@ -212,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "d639a39f-eccf-486c-89d2-a111ba5747e6",
    "metadata": {},
    "outputs": [],
@@ -225,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "50a54c48-4f4a-497c-8cfe-f3924b290963",
    "metadata": {},
    "outputs": [
@@ -280,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "d90f71e0-92a7-457e-b9e1-335eaaff0e4c",
    "metadata": {},
    "outputs": [
@@ -356,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "36b968b5-b05b-47b7-bd54-0f254474131f",
    "metadata": {},
    "outputs": [
@@ -456,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "ea1fc7bd-ffa2-4214-9de4-53bd9a7d5a19",
    "metadata": {},
    "outputs": [
@@ -466,7 +403,7 @@
        "<AxesSubplot:title={'center':'Sharpe Ratios'}, xlabel='date'>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
